# hotel-reservations-analysis

./: README.md  main.ipynb  pyproject.toml
data/: Hotel Reservations clean.csv  Hotel Reservations results.csv
